src/app/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --primary-glow: conic-gradient(from 180deg at 50% 50%,
      #16abff33 0deg,
      #0885ff33 55deg,
      #54d6ff33 120deg,
      #0071ff33 160deg,
      transparent 360deg);
  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
      rgba(255, 255, 255, 0));

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(#00000080,
      #00000040,
      #00000030,
      #00000020,
      #00000010,
      #00000010,
      #00000080);

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(to bottom right,
        rgba(1, 65, 255, 0),
        rgba(1, 65, 255, 0),
        rgba(1, 65, 255, 0.3));

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(#ffffff80,
        #ffffff40,
        #ffffff30,
        #ffffff20,
        #ffffff10,
        #ffffff10,
        #ffffff80);

    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  scroll-behavior: smooth;

  /* for the Sticky footer (removed because it doesn't work on Firefox) */
  /* height: 100%; */
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(to bottom,
      transparent,
      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

/* Customs */

/* Header */

header {
  display: flex;
  justify-content: center;
}

.header {
  overflow: hidden;
  background-color: black;
}

.header a {
  float: left;
  color: #eee;
  text-decoration: none;
  text-align: center;
  font-weight: 800;
  line-height: 1em;
  text-transform: uppercase;
  padding: 2em;
}

.header a:hover {
  cursor: pointer;
  background-color: #eee;
  color: black;
}

.header-right {
  float: right;
}

@media screen and (max-width: 800px) {
  .header a {
    float: none;
    display: block;
    text-align: left;
  }

  .header-right {
    float: none;
  }
}

/* Hero Content */

.hero_content {
  color: #333;
  background-position: center;
  background-color: #eee;
  background-image:
    /* linear-gradient(to top, rgba(203, 230, 254, 0.138) 0%, rgba(206, 243, 255, 0.272) 100%), */
    url('/img/geometric_mosaic_tile_shape_background.webp');
  height: 50vh;
  min-height: 30rem;
  max-height: 60rem;
  /* position: relative; */
  text-align: center;
}

h1.hero_primary {
  font-size: 5em;
  /* text-transform: uppercase; */
  letter-spacing: 1px;
  text-align: center;
  color: #111;
  font-weight: 800;
}

@media only screen and (max-width: 37.5em) {
  h1.hero_primary {
    font-size: 4rem
  }
}

.coloured-text {
  text-transform: uppercase;
  animation: fade-colours 20s infinite;
}

@keyframes fade-colours {
  0% {
    color: black;
  }

  10% {
    color: blue;
  }

  20% {
    color: limegreen;
  }

  30% {
    color: orange;
  }

  40% {
    color: red;
  }

  60% {
    color: violet;
  }

  70% {
    color: orange;
  }

  80% {
    color: limegreen;
  }

  90% {
    color: blue;
  }

  100% {
    color: black;
  }
}

.hero_secondary {
  /* margin: 3rem auto 0 auto; */
  max-width: 80rem;
  color: #333;
  font-size: 2.2rem;
  text-align: center;
  width: 100%;
  line-height: 1.6;
}

@media only screen and (max-width: 37.5em) {
  .hero_secondary {
    font-size: 1.7rem;
  }
}

/* About */
.about_title {
  color: #333;
  font-size: 2.2rem;
  text-align: center;
  line-height: 2.2;
}

.about_content {
  text-align: center;
}

h2 {
  color: #333;
  font-size: 2.2rem;
  text-align: center;
  line-height: 2.2;
}


h3 {
  margin-top: 1em;
  margin-bottom: 0.5em;
  line-height: 2em;
}

.bio {
  font-size: 1.2em;
  color: #666;
  /* max-width: 60rem; */
  line-height: 1.7;
  text-align: start;
  margin-bottom: 1em;
}

.bio a {
  color: darkblue;
  text-decoration: underline;
}

.bio-itch {
  font-size: 1.2em;
  color: #666;
  /* max-width: 60rem; */
  line-height: 1.7;
  text-align: start;
}

.bio-itch a {
  color: darkblue;
  text-decoration: underline;
}

/* Skills */
.skill {
  background-color: lightgray;
  margin-right: 0.7em;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  padding: 1em;
  border-radius: 0.5em;
  font-weight: 500;
  /* line-height: 1em; */
}

/* Certifications */
.certification-zoom {
  transition: transform .2s;
}

.certification-zoom:hover {
  transform: scale(1.3);
}

/* Projects */
.project_content {
  color: #333;
  background-color: #fafafa;
  text-align: center;
}

.project_card {
  background-color: white;
  color: #333;
  padding: 0.5em;
  cursor: pointer;
  transition: box-shadow 0.5s;

  /* Needed to avoid tooltip being cutoff by the Card */
  overflow: visible;
  z-index: auto;
}

.project_card:hover {
  box-shadow: 0 0 20px #515151;
}

.technology-logo {
  margin-right: 0.5em;
}

.visually-hidden {
  position: absolute !important;
  width: 1px !important;
  height: 1px !important;
  margin: 0 !important;
  padding: 0 !important;
  overflow: hidden !important;
  clip: rect(0 0 0 0) !important;
  -webkit-clip-path: inset(50%) !important;
  clip-path: inset(50%) !important;
  border: 0 !important;
  white-space: nowrap !important
}


/* Tooltips */
.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;

  /* Position the tooltip text */
  position: absolute;
  z-index: 1;
  width: 120px;
  bottom: 120%;
  left: 50%;
  margin-left: -63px;

  opacity: 0;
  transition: opacity 1s;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

.tooltip .tooltiptext::after {
  content: " ";
  position: absolute;
  top: 100%;
  /* At the bottom of the tooltip */
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

/* Footer */

footer {
  display: flex;
  justify-content: center;
}

.footer {
  overflow: hidden;
  background-color: black;
  justify-content: space-between;
  display: flex;
}

.footer-copyright {
  color: darkgrey;
  text-align: center;
  align-self: center;
  padding: 4em;
  padding-left: 2em;
}

.footer a {
  padding: 1em;
}

.footer-right {
  align-self: center;
}


/* Sticky Footer*/
.wrapper {
  box-sizing: border-box;
  min-height: 100%;
  display: flex;
  flex-direction: column;
}

.page-header,
.page-footer {
  flex-grow: 0;
  flex-shrink: 0;
}

.page-body {
  color: #333;
  background-color: #eee;
  flex-grow: 1;
}

